<resources>
    <string name="app_name">SunibTinder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email_binus_ac_id">Email</string>
    <string name ="getting_data">Getting Data</string>
    <string name ="getting_suggested_user">Getting Suggested User</string>
    <string name="full_name">Full Name</string>
    <string name="add">Add</string>
    <string name="passions">Passions</string>
    <string name="done">Done</string>
    <string name="login_with_google">Login With Google</string>
    <string name="or">OR</string>
    <string name="settings">SETTINGS</string>
    <string name="register">Register</string>
    <string name="mininum_age">Minimum Age</string>
    <string name="maximum_age">Maximum Age</string>
    <string name="input_your_e_mail">Input your E-mail</string>
    <string name="new_e_mail">New E-mail</string>
    <string name="confirm_e_mail">Confirm E-mail</string>
    <string name="name">Name</string>
    <string name="percentage" translatable="false">Percentage</string>
    <string name="age">Age</string>
    <string name="assign_slider" translatable="false">Assigning to slider</string>
    <string name="modify">Modify</string>
    <string name="living_in">Living In</string>
    <string name="campus_location">Campus Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="input_your_password">Input your password</string>
    <string name="suggestion_preferences">Suggestion Preferences</string>
    <string name="edit_info">EDIT INFO</string>
    <string name="logout">Log Out</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_email">Edit E-Mail</string>
    <string-array name="binus_locations">
        <item></item>
        <item>Anggrek</item>
        <item>Syahdan</item>
        <item>Kijang</item>
        <item>Alam Sutera</item>
        <item>Bekasi</item>
        <item>Bandung</item>
        <item>Malang</item>
        <item>JWC</item>
        <item>ASO</item>
    </string-array>
    <string-array name="passions">
        <item>Sport</item>
        <item>Foodie</item>
        <item>Travel</item>
        <item>Reading</item>
        <item>Gaming</item>
        <item>Anime</item>
        <item>Movies</item>
        <item>Coffe Addict</item>
        <item>Gym</item>
        <item>Fashion</item>
        <item>Biking</item>
        <item>Self Defense</item>
        <item>Running</item>
        <item>Healthy Eating</item>
    </string-array>

    <string-array name="genders">
        <item>

        </item>
        <item>
            Male
        </item>
        <item>
            Female
        </item>
    </string-array>

    <string-array name="preferences">
        <item>

        </item>
        <item>
            Same Campus
        </item>
        <item>
            Inter Campus
        </item>
    </string-array>



</resources>