<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:layout_width="262dp"
            android:layout_height="54dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email_binus_ac_id"
            android:inputType="textEmailAddress"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="266dp" />

        <EditText
            android:autofillHints="password"
            android:layout_width="262dp"
            android:layout_height="54dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="358dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/MainColor"
            android:text="@string/login"
            android:textColor="@color/White"
            app:cornerRadius="@android:dimen/app_icon_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="458dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>